# gv2

./: .cvsignore  Makefile.am  README  acconfig.h  aclocal.m4  configure.in  gv2.dsw  gv2.mdl  gv2design.sda  mkinstalldirs  reconf
Common/: Common.dsp  Makefile.am  liblist
Common/Bases/: Headers  Makefile.am  RefObject.cpp  RefObject.h  StorageObject.cpp  StorageObject.h  TypeObject.cpp  TypeObject.h
Common/Geom/: Geom.cpp  Geom.h  Geom.i  GeomBezier.cpp  GeomBezier.h  GeomComment.cpp  GeomComment.h  GeomHandle.cpp  GeomHandle.h  GeomList.cpp  GeomList.h  GeomList.i  GeomMesh.cpp  GeomMesh.h  GeomOff.cpp  GeomOff.h  GeomOldOoglParser.cpp  GeomOldOoglParser.h  GeomOoglParser.cpp  GeomOoglParser.h  GeomOoglParser.i  GeomParent.cpp  GeomParent.h  GeomParent.i  GeomQuad.cpp  GeomQuad.h  GeomSkel.cpp  GeomSkel.h  GeomVect.cpp  GeomVect.h  GeomWrapped.cpp  GeomWrapped.h  GeomWrapped.i  Headers  Makefile.am
Common/Geometry/: Geometry.h  HPoint3.cpp  HPoint3.h  Headers  Makefile.am  Point3.cpp  Point3.h  Transform3.cpp  Transform3.h  Transform3.i
Common/Gv/: GvAction.cpp  GvAction.h  GvAction.i  GvApp.cpp  GvApp.h  GvCamera.cpp  GvCamera.h  GvCamera.i  GvEvent.cpp  GvEvent.h  GvMotion.cpp  GvMotion.h  GvMotion.i  GvPath.cpp  GvPath.h  GvPath.i  GvRotateMotion.cpp  GvRotateMotion.h  GvRotateMotion.i  GvScaleMotion.cpp  GvScaleMotion.h  GvScaleMotion.i  GvTranslateMotion.cpp  GvTranslateMotion.h  GvTranslateMotion.i  GvUniverse.cpp  GvUniverse.h  GvUniverse.i  Headers  Makefile.am
Common/Io/: .cvsignore  Headers  IoDataStream.cpp  IoDataStream.h  IoOoglLexer.h  IoOoglLexer.re  IoOoglParseException.cpp  IoOoglParseException.h  Makefile.am
Common/Io/old/: IoOldOoglLexer.cpp  IoOldOoglLexer.h  IoOldOoglParseException.cpp  IoOldOoglParseException.h  IoOldOoglToken.cpp  IoOldOoglToken.h
Common/Mg/: Headers  Makefile.am  MgAppearance.cpp  MgAppearance.h  MgAppearanceIo.cpp  MgAppearanceStack.cpp  MgAppearanceStack.h  MgCamera.cpp  MgCamera.h  MgColor.cpp  MgColor.h  MgContext.cpp  MgContext.h  MgContext.i  MgContextShade.cpp  MgLight-new.h  MgLight.cpp  MgLight.h  MgLightList.cpp  MgLightList.h  MgLighting.cpp  MgLighting.h  MgLightingIo.cpp  MgMaterial.cpp  MgMaterial.h  MgMaterialIo.cpp  MgOpenGlContext.cpp  MgOpenGlContext.h  MgOpenGlContext.i  MgOpenGlContextDraw.cpp  MgOpenGlContextMesh.cpp  MgOpenGlContextShade.cpp  MgOpenGlContextShade.h  MgProperty.cpp  MgProperty.h  MgTexture.cpp  MgTexture.h  MgWindow.cpp  MgWindow.h  MgWindow.i  (+1 more)
Common/Ut/: Headers  Makefile.am  UtDynamicListInterface.h  UtException.cpp  UtException.h  UtLList.h  UtLStack.h  UtLVec.h  UtMath.h  UtMemoryTracker.cpp  UtMemoryTracker.h  UtScalarArray.h  UtString.cpp  UtString.h  UtUArray.cpp  UtUArray.h  UtVArray.h  UtVRefPtrArray.h  UtVVec.cpp  UtVVec.h  mallocp.c  vvecold.c
Py/: .cvsignore  .gdbinit  CameraCanvas.py  CameraFrame.py  EventHandler.py  GeomviewApp.py  Makefile.am  NOTES  Py.dsp  PyGv.i  TestTimer.py  Tree.py  data.oogl  dodec.off  gv2  loadtest.cpp  motion.tex  nmakefile  pystructure  setenv.bat
Py/swigtest/: Makefile  MyTest.cpp  MyTest.h  MyTest.i  mytest.i  test.py
glTrace/: GlHeaders.h  Headers  Makefile.am  glNoTraceMacros.h  glTrace.c  glTraceMacros.h  glTraceProtos.h  makegltrace
y1.9kstuff/: Conventions.NOTES  Init.NOTES  ProjectOrg.NOTES  README  TreeNotes.NOTES  classes.NOTES  headers.NOTES  light.NOTES  merge.NOTES  mgopengl.NOTES  renaming.NOTES  world.NOTES
y1.9kstuff/Common/Gv/: GvPath.cpp  GvPath.h
y1.9kstuff/Ms/: MsGv.dsp  MsGv.dsw
y1.9kstuff/Ms/MsGv/: AppearanceDlg.cpp  AppearanceDlg.h  ChildFrm.cpp  ColorButton.cpp  ColorButton.h  DebugDlg.cpp  DebugDlg.h  EventHandler.cpp  EventHandler.h  MainFrm.cpp  MgColorChoice.cpp  MgColorChoice.h  MgColorDialog.cpp  MgColorDialog.h  MgColorSlider.cpp  MgColorSlider.h  MgColorWindow.cpp  MgColorWindow.h  MsGv.aps  MsGv.clw  MsGv.cpp  MsGv.h  MsGv.rc  MsGvDoc.cpp  MsGvDoc.h  MsGvOpenGlWindow.cpp  MsGvOpenGlWindow.h  MsGvThread.cpp  MsGvThread.h  MsGvView.cpp  MsGvView.h  OkMessageDlg.cpp  OkMessageDlg.h  ReadMe.NOTES  Resource.h  StdAfx.cpp  StdAfx.h  StdAfx.h-orig  TreeDlg.cpp  TreeDlg.h  (+4 more)
y1.9kstuff/Ms/MsGv/res/: MsGv.rc2
y1.9kstuff/Ms/MsGv/saved/: MsGvOpenGlWindow.cpp  MsGvOpenGlWindow.h
y1.9kstuff/data/: data  data.ap  data.geom  data.list  data.off  data.twisted-mesh  person.oogl
y1.9kstuff/new/: GvAction.h  GvApp.h  GvCamera.cpp  GvCamera.h  GvWorld.cpp  GvWorld.h
y1.9kstuff/oldtools/: Geomview.dsw  bscmake.cmd  delete-pch.pl  make-archive.pl  make-bsc.pl  make-src-archive.pl  tidy-files.pl
