AC_INIT

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(gv,2.0a1)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr/local/Geomview2)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_ARG_ENABLE(gltrace,
	      [--enable-gltrace           turn on tracing of GL calls],
	      [ if test "$enableval" != "no" ; then
                  AC_DEFINE(GEOM_GLTRACE, 1)
                fi ]
              )



LF_LINK_HEADERS(Common/Bases    \
                Common/Io       \
                Common/Ut       \
                Common/Geometry \
                Common/Mg       \
                Common/Geom     \
                Common/Gv       \
 	        glTrace         \
       	       )
LF_SET_INCLUDES
 
AC_OUTPUT(Makefile
	  m4/Makefile
          Common/Makefile
          Common/Ut/Makefile
          Common/Io/Makefile
          Common/Mg/Makefile
          Common/Bases/Makefile
          Common/Geometry/Makefile
          Common/Geom/Makefile
          Common/Gv/Makefile
	  glTrace/Makefile
	  Py/Makefile
         )
