INCLUDES = $(default_includes)
EXTRA_DIST = Headers \
	     GeomOldOoglParser.cpp GeomOldOoglParser.h \
             Geom.i GeomParent.i GeomWrapped.i GeomOoglParser.i GeomList.i

noinst_LIBRARIES = libGeom.a

libGeom_a_SOURCES =                                    \
		Geom.cpp Geom.h                        \
		GeomBezier.cpp GeomBezier.h	       \
		GeomComment.cpp GeomComment.h	       \
		GeomHandle.cpp GeomHandle.h	       \
		GeomList.cpp GeomList.h		       \
		GeomMesh.cpp GeomMesh.h		       \
		GeomOff.cpp GeomOff.h		       \
		GeomParent.cpp GeomParent.h	       \
		GeomQuad.cpp GeomQuad.h		       \
		GeomSkel.cpp GeomSkel.h		       \
		GeomVect.cpp GeomVect.h		       \
		GeomWrapped.cpp GeomWrapped.h	       \
                GeomOoglParser.cpp GeomOoglParser.h
