INCLUDES = $(default_includes)
EXTRA_DIST = Headers GvCamera.i GvUniverse.i \
             GvAction.i GvMotion.i GvRotateMotion.i GvTranslateMotion.i GvPath.i \
             GvApp.h GvApp.cpp


noinst_LIBRARIES = libGv.a

libGv_a_SOURCES =              \
    GvPath.h GvPath.cpp        \
    GvAction.h GvAction.cpp    \
    GvCamera.h GvCamera.cpp    \
    GvEvent.h GvEvent.cpp      \
    GvMotion.h GvMotion.cpp    \
    GvRotateMotion.h GvRotateMotion.cpp    \
    GvTranslateMotion.h GvTranslateMotion.cpp    \
    GvUniverse.h GvUniverse.cpp
