INCLUDES = $(default_includes)
EXTRA_DIST = Headers MgLight-new.h MgContext.i MgOpenGlContext.i MgWindow.i

noinst_LIBRARIES = libMg.a

libMg_a_SOURCES =                                        \
    MgAppearance.h MgAppearance.cpp MgAppearanceIo.cpp   \
    MgAppearanceStack.h MgAppearanceStack.cpp		 \
    MgCamera.h MgCamera.cpp				 \
    MgColor.h MgColor.cpp				 \
    MgContext.h  MgContext.cpp MgContextShade.cpp	 \
    MgLight.h MgLight.cpp				 \
    MgLightList.h MgLightList.cpp			 \
    MgLighting.h MgLighting.cpp MgLightingIo.cpp	 \
    MgMaterial.h MgMaterial.cpp MgMaterialIo.cpp	 \
    MgOpenGlContext.h MgOpenGlContext.cpp 		 \
		      MgOpenGlContextDraw.cpp 		 \
		      MgOpenGlContextMesh.cpp		 \
    MgOpenGlContextShade.h MgOpenGlContextShade.cpp	 \
    MgProperty.h MgProperty.cpp				 \
    MgTexture.h MgTexture.cpp				 \
    MgWindow.h MgWindow.cpp				 \
    ooglutil.h

