INCLUDES = $(default_includes)
EXTRA_DIST = Headers

noinst_LIBRARIES = libUt.a

libUt_a_SOURCES =                           \
    UtDynamicListInterface.h		    \
    UtException.h UtException.cpp	    \
    UtLList.h				    \
    UtLStack.h				    \
    UtLVec.h				    \
    UtMath.h				    \
    UtMemoryTracker.h UtMemoryTracker.cpp   \
    UtString.h UtString.cpp 		    \
    UtScalarArray.h			    \
    UtUArray.h UtUArray.cpp		    \
    UtVArray.h				    \
    UtVRefPtrArray.h			    \
    UtVVec.h UtVVec.cpp                     \
    vvecold.c                               \
    mallocp.c
